--- a/res/layout/activity_alarm.xml
+++ b/res/layout/activity_alarm.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -23,8 +24,7 @@
         android:layout_marginBottom="30dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="8dp"
-        app:cardBackgroundColor="#2c3e50"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        app:cardBackgroundColor="#2c3e50">
 
         <LinearLayout
             android:layout_width="match_parent"
