--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -89,7 +89,7 @@
             android:text="贪睡 5 分钟"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="white"
+            android:textColor="@android:color/white"
             android:background="@drawable/button_snooze"
             android:elevation="4dp" />
 
